scripts/e2e/cmd/runner/testdata/one-namespace-one-ingress/ssl-redirect-to-https-backend/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-deployment
spec:
  selector:
    matchLabels:
      app: ws-app
  replicas: 2
  template:
    metadata:
      labels:
        app: ws-app
    spec:
      containers:
        - name: websocket-app
          imagePullPolicy: Always
          image: docker.io/kennethreitz/httpbin
          ports:
            - containerPort: 443
          livenessProbe:
            httpGet:
              path: /status/200
              port: 443
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
        - name: acr-creds
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  selector:
    app: ws-app
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: websocket-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-protocol: "https"
spec:
  tls:
   - hosts:
     - ws.mis.li
     secretName: testsecret-tls
  backend:
    serviceName: websocket-service
    servicePort: 443
  rules:
    - host: ws.mis.li
      http:
        paths:
        - path: /igloo
          backend:
            serviceName: websocket-service
            servicePort: 443
---
apiVersion: v1
data:
  tls.crt: QmFnIEF0dHJpYnV0ZXMKICAgIGxvY2FsS2V5SUQ6IDAxIDAwIDAwIDAwIAogICAgMS4zLjYuMS40LjEuMzExLjE3LjMuNzE6IDREIDAwIDQ5IDAwIDRFIDAwIDQ5IDAwIDRFIDAwIDU0IDAwIDJEIDAwIDQ4IDAwIDU0IDAwIDUyIDAwIDM2IDAwIDU2IDAwIDU0IDAwIDM2IDAwIDJFIDAwIDZFIDAwIDZGIDAwIDcyIDAwIDc0IDAwIDY4IDAwIDYxIDAwIDZEIDAwIDY1IDAwIDcyIDAwIDY5IDAwIDYzIDAwIDYxIDAwIDJFIDAwIDYzIDAwIDZGIDAwIDcyIDAwIDcwIDAwIDJFIDAwIDZEIDAwIDY5IDAwIDYzIDAwIDcyIDAwIDZGIDAwIDczIDAwIDZGIDAwIDY2IDAwIDc0IDAwIDJFIDAwIDYzIDAwIDZGIDAwIDZEIDAwIDAwIDAwIApzdWJqZWN0PS9DT [...]
  tls.key: QmFnIEF0dHJpYnV0ZXMKICAgIE1pY3Jvc29mdCBMb2NhbCBLZXkgc2V0OiA8Tm8gVmFsdWVzPgogICAgbG9jYWxLZXlJRDogMDEgMDAgMDAgMDAgCiAgICBmcmllbmRseU5hbWU6IHRlLTgzMDkwZjk3LWIzOWItNDFmMC05YmYyLTkzNTM0MjhlODdlYQogICAgTWljcm9zb2Z0IENTUCBOYW1lOiBNaWNyb3NvZnQgU29mdHdhcmUgS2V5IFN0b3JhZ2UgUHJvdmlkZXIKS2V5IEF0dHJpYnV0ZXMKICAgIFg1MDl2MyBLZXkgVXNhZ2U6IDkwIAotLS0tLUJFR0lOIFBSSVZBVEUgS0VZLS0tLS0KTUlJRXZRSUJBREFOQmdrcWhraUc5dzBCQVFFRkFBU0NCS2N3Z2dTakFnRUFBb0lCQVFDbFdUY0hTWDBaRDd4cApsdFpkNDh4QXJZQ1NkMUZiVjF4L3BNVHJMT [...]
kind: Secret
metadata:
  name: testsecret-tls
type: kubernetes.io/tls
